# django-nuxt

./: README.md  pyproject.toml
backend/: settings.py  urls.py
frontend/: README.md  package-lock.json  package.json
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue
frontend/store/: index.js
