[tool.poetry]
name = "django-nuxt"
version = "0.1.0"
description = "A simple Django-Nuxt integration project"
authors = ["Marco André Mendes <marcoandre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
